--- a/style.css
+++ b/style.css
@@ -2,9 +2,12 @@
   overflow-x: hidden;
 }
 
+ul {
+  list-style-type: none;
+}
+
 .nav_container {
   display: flex;
-  width: 100%;
   margin-left: -25px;
   margin-top: -8px;
 }
@@ -42,42 +45,49 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 915px;
   background-image: url("images/header-shapes-mobile.png");
   background-repeat: no-repeat;
   background-size: 100%;
 }
 
 .box1 {
-  width: 80%;
+  width: 60%;
   margin-top: 20%;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
-  font-weight: bold;
-  font-size: 80px;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 52px;
   display: flex;
   align-items: center;
   justify-content: center;
   color: #172b4d;
-  padding: 24px;
+  padding-left: 24px;
+  padding-right: 24px;
 }
 
 .box2 {
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
-  font-size: 25px;
+  font-weight: 400;
+  line-height: 24px;
+  font-size: 16px;
   vertical-align: top;
   color: #344563;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 24px;
+  padding-right: 24px;
+  padding-left: 24px;
 }
 
 .box3 {
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
+  font-weight: 500;
   line-height: 24px;
-  font-size: 27px;
+  font-size: 16px;
   vertical-align: top;
   color: #7f8cff;
   display: flex;
@@ -87,12 +97,18 @@
 
 .box4 {
   display: flex;
-  padding: 24px;
+  padding-left: 24px;
+  margin-left: -3px;
 }
 
 .socials {
   width: 10%;
   align-items: center;
   justify-content: center;
-  padding: 10px;
+  padding: 2px;
+}
+
+.socials img {
+  width: 20px;
+  height: 20px;
 }
