Added rotation animation to logo

--- a/style.css
+++ b/style.css
@@ -37,6 +37,11 @@ ul {
   display: flex;
   align-items: center;
   justify-content: center;
+  animation: rotation 5s;
+}
+
+@keyframes rotation {
+  50% { transform: rotate(360deg); }
 }
 
 .logo img {
