--- a/style.css
+++ b/style.css
@@ -41,7 +41,9 @@ ul {
 }
 
 @keyframes rotation {
-  50% { transform: rotate(360deg); }
+  50% {
+    transform: rotate(360deg);
+  }
 }
 
 .logo img {
@@ -75,7 +77,7 @@ ul {
 .box1 {
   width: 300px;
   margin-top: 20%;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 40px;
@@ -89,7 +91,7 @@ ul {
 }
 
 .box2 {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   width: 85%;
   font-weight: 400;
@@ -105,7 +107,7 @@ ul {
 }
 
 .box3 {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 500;
   line-height: 24px;
@@ -162,7 +164,7 @@ ul {
 }
 
 .project_title {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   margin-top: -10px;
   margin-left: -12px;
@@ -181,7 +183,7 @@ ul {
 }
 
 .project_title_II {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 600;
   margin-left: -8px;
@@ -205,12 +207,12 @@ ul {
 }
 
 .job_title_info::before {
-  content: url('images/Counter.png');
+  content: url("images/Counter.png");
   margin-right: 10px;
 }
 
 .project_full_desc {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
@@ -220,7 +222,7 @@ ul {
 }
 
 .project_tags_container {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   display: flex;
   flex-wrap: wrap;
@@ -237,12 +239,12 @@ ul {
   line-height: 16px;
   color: #6070ff;
   background: #ebebff;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
 }
 
 .view_project_btn {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   width: 124px;
   height: 48px;
@@ -280,6 +282,7 @@ ul {
 .view_project_btn:hover {
   background-color: #6070ff;
   color: white;
+  transform: scale(1.2);
 }
 
 .view_project_btn:active {
@@ -301,7 +304,7 @@ ul {
 }
 
 .resume_btn {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   width: 170px;
   height: 48px;
@@ -362,7 +365,7 @@ ul {
 }
 
 .skills_dropdown_title {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
@@ -392,7 +395,7 @@ ul {
 }
 
 .skills_desc_li_title {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -440,7 +443,7 @@ ul {
 
 .contact_header {
   margin-top: 140px;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   color: #fff;
   text-align: center;
@@ -450,7 +453,7 @@ ul {
 }
 
 .contact_description {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   color: #ebebff;
   text-align: center;
@@ -460,7 +463,7 @@ ul {
   line-height: 28px;
 }
 
-input[type=text],
+input[type="text"],
 select {
   width: 100%;
   padding: 12px;
@@ -470,14 +473,14 @@ select {
   border: 1px solid #ccc;
   border-radius: 8px;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
   line-height: 28px;
 }
 
-input[type=email],
+input[type="email"],
 select {
   width: 100%;
   padding: 12px;
@@ -487,7 +490,7 @@ select {
   border: 1px solid #ccc;
   border-radius: 8px;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
@@ -495,7 +498,7 @@ select {
 }
 
 label {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
@@ -508,7 +511,7 @@ textarea {
   height: 150px;
   padding: 12px;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   border: 2px solid #ccc;
   border-radius: 8px;
@@ -520,7 +523,7 @@ textarea {
 }
 
 .submit_btn {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   width: 170px;
   height: 48px;
@@ -590,7 +593,7 @@ textarea {
 }
 
 .desk_nav_info {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   text-decoration: none;
   font-weight: 500;
