--- a/style.css
+++ b/style.css
@@ -621,6 +621,11 @@ textarea {
     margin-right: 32px;
   }
 
+  .desk_nav_li a:hover {
+    color: #6070ff;
+    font-size: large;
+  }
+
   .logo img {
     width: 30%;
   }
