--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ main {
   margin-left: -10px;
 }
 
+.parent_main {
+  filter: none;
+}
+
 ul {
   list-style-type: none;
 }
@@ -601,6 +605,50 @@ textarea {
   font-size: 15px;
   line-height: 20px;
   color: #344563;
+}
+
+.mobile_side_nav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  margin-top: -10px;
+  margin-right: -35px;
+  background-color: #6070ff;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+  opacity: 0.7;
+}
+
+.mobile_side_nav_active {
+  width: 100%;
+}
+
+.mobile_side_nav li a {
+  padding: 8px 8px 8px 3px;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  text-decoration: none;
+  list-style: none;
+  font-weight: 600;
+  margin-top: 10px;
+  font-size: 32px;
+  line-height: 44px;
+  color: #fff;
+  display: block;
+  transition: 0.3s;
+}
+
+.closebtn {
+  position: absolute;
+  top: 19px;
+  right: 59px;
+  font-size: 36px;
+  margin-top: 12px;
+  margin-right: 20px;
 }
 
 @media screen and (min-width: 992px) {
