--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ ul {
   list-style: none;
 }
 
-.parent_main_blur {
+.blur {
   filter: blur(10px);
 }
 
@@ -31,6 +31,10 @@ ul {
   margin-left: -25px;
   margin-top: -8px;
   background-color: #fff;
+}
+
+.vanish {
+  display:none;
 }
 
 .nav_container,
