--- a/style.css
+++ b/style.css
@@ -772,6 +772,37 @@ textarea {
   width: 100%;
 }
 
+.validation_message {
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  color: #f00;
+  text-align: center;
+  margin: 0.8rem 0 2.8rem;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 28px;
+}
+
+.shake {
+  animation-name: shake;
+  animation-duration: 0.5s;
+  transform-origin: 50% 50%;
+}
+
+@keyframes shake {
+  0% { transform: translate(2px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { -webkit-transform: translate(-3px, 0) rotate(1deg); }
+  30% { -webkit-transform: translate(0, 2px) rotate(0deg); }
+  40% { -webkit-transform: translate(1px, -1px) rotate(1deg); }
+  50% { -webkit-transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { -webkit-transform: translate(-3px, 1px) rotate(0deg); }
+  70% { -webkit-transform: translate(2px, 1px) rotate(-1deg); }
+  80% { -webkit-transform: translate(-1px, -1px) rotate(1deg); }
+  90% { -webkit-transform: translate(2px, 2px) rotate(0deg); }
+  100% { -webkit-transform: translate(1px, -2px) rotate(-1deg); }
+}
+
 @media screen and (min-width: 992px) {
   .desktop_nav {
     display: flex;
